add interpetor to silence warning

--- a/k3s-ansible/inventory.ini
+++ b/k3s-ansible/inventory.ini
@@ -1,3 +1,5 @@
 [myhosts]
-k3s-1.local
-k3s-2.local
+k3s-1.home ansible_python_interpreter=/usr/bin/python3
+k3s-2.home ansible_python_interpreter=/usr/bin/python3
+k3s-3.home ansible_python_interpreter=/usr/bin/python3
+argocd.home ansible_python_interpreter=/usr/bin/python3
