--- a/argocd/env-app-applicationset.yaml
+++ b/argocd/env-app-applicationset.yaml
@@ -8,16 +8,16 @@ spec:
     - list:
         elements:
           - name: dev
-            path: overlays/dev
-            cluster: https://k3s-1.home
+            path: argocd/env-app/overlays/dev
+            cluster: https://k3s-1.home:6443
             namespace: env-app
           - name: stage
-            path: overlays/stage
-            cluster: https://k3s-2.home
+            path: argocd/env-app/overlays/stage
+            cluster: https://k3s-2.home:6443
             namespace: env-app
           - name: prod
-            path: overlays/prod
-            cluster: https://k3s-3.home
+            path: argocd/env-app/overlays/prod
+            cluster: https://k3s-3.home:6443
             namespace: env-app
   template:
     metadata:
@@ -25,7 +25,7 @@ spec:
     spec:
       project: default
       source:
-        repoURL: https://github.com/youruser/env-app.git
+        repoURL: https://github.com/andyr8939/homelab.git
         targetRevision: main
         path: '{{path}}'
       destination:
