forgot to update patchces

--- a/argocd/env-app/overlays/prod/patch-ingress.yaml
+++ b/argocd/env-app/overlays/prod/patch-ingress.yaml
@@ -8,3 +8,12 @@ metadata:
 spec:
   rules:
     - host: k3s-3.home  # gets patched
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: env-web
+                port:
+                  number: 80
