--- a/argocd/env-app/base/ingress.yaml
+++ b/argocd/env-app/base/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: env-web-ingress
+  name: env-app-ingress
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
@@ -14,6 +14,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: env-web
+                name: env-app
                 port:
                   number: 80
