add external dns to ingress

--- a/argocd/env-app/base/ingress.yaml
+++ b/argocd/env-app/base/ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   name: env-app-ingress
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
+    external-dns.alpha.kubernetes.io/target: unknown.monopot.xyz
+    kubernetes.io/ingress.class: traefik
 spec:
   rules:
     - host: unknown  # gets patched
