--- a/argocd/env-app/overlays/dev/patch-ingress.yaml
+++ b/argocd/env-app/overlays/dev/patch-ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
     external-dns.alpha.kubernetes.io/target: env-app-k3s-1.monopot.xyz
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
     kubernetes.io/ingress.class: traefik 
 spec:
   rules:
