--- a/argocd/env-app/base/ingress.yaml
+++ b/argocd/env-app/base/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: web
     external-dns.alpha.kubernetes.io/target: unknown.monopot.xyz
     kubernetes.io/ingress.class: traefik
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 spec:
   rules:
     - host: unknown  # gets patched
