--- a/argocd/env-app/base/ingress.yaml
+++ b/argocd/env-app/base/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
     kubernetes.io/ingress.class: traefik
-    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
 spec:
   rules:
     - host: unknown  # gets patched
