--- a/argocd/env-app/overlays/stage/patch-ingress.yaml
+++ b/argocd/env-app/overlays/stage/patch-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: env-app-ingress
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
-    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
     kubernetes.io/ingress.class: traefik 
 spec:
   rules:
